Changing name to aioimdb

--- a/tox.ini
+++ b/tox.ini
@@ -5,16 +5,15 @@ envlist = py{26,27,py,33,34,35}-normal,lint
 
 commands =
     coverage erase
-    coverage run --source='.'  -m py.test {toxinidir}/src/tests/
+    coverage run --source='.'  -m py.test {toxinidir}/tests/
     coverage html
 
 deps =
     -rtest_requirements.txt
-    py26: unittest2
 
 [testenv:lint]
 commands =
-    flake8 {toxinidir}/src/
+    flake8 {toxinidir}/
 
 deps =
     flake8>=2.1.0,<2.2.0
