--- a/tox.ini
+++ b/tox.ini
@@ -1,23 +1,20 @@
+# tox (https://tox.readthedocs.io/) is a tool for running tests
+# in multiple virtualenvs. This configuration file will run the
+# test suite on all supported python versions. To use it, "pip install tox"
+# and then run "tox" from this directory.
+
 [tox]
-envlist = py{36}-normal,lint
+envlist = py36
 
 [testenv]
-
-commands =
-    coverage erase
-    coverage run --source='.'  -m py.test {toxinidir}/tests/
-    coverage html
-
+commands = py.test tests
 deps =
-    -rtest_requirements.txt
-
-[testenv:lint]
-commands =
-    flake8 {toxinidir}/
-
-deps =
-    flake8>=2.1.0,<2.2.0
-    pep8-naming==0.2.2
-
-[flake8]
-ignore = F401,N802
+    pytest
+    pytest_asyncio
+    aiohttp
+    diskcache
+    python-dateutil
+    boto
+    wheel
+    freezegun
+    coverage
