--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,6 @@
-wheel==0.30.0
+wheel==0.31.0
 boto==2.48.0
-python-dateutil==2.6.1
-diskcache==2.9.0
-aiohttp==2.3.10
+python-dateutil==2.7.2
+diskcache==3.0.1
+aiohttp==3.1.1
+setuptools==39.0.1
