--- a/tox.ini
+++ b/tox.ini
@@ -7,7 +7,10 @@
 envlist = py36
 
 [testenv]
-commands = py.test tests
+passenv = CI TRAVIS TRAVIS_*
+commands = 
+    py.test tests
+    codecov
 deps =
     pytest
     pytest_asyncio
@@ -18,3 +21,4 @@ deps =
     wheel
     freezegun
     coverage
+    codecov
