Completing codecov installation

--- a/tox.ini
+++ b/tox.ini
@@ -9,7 +9,7 @@ envlist = py36
 [testenv]
 passenv = CI TRAVIS TRAVIS_*
 commands = 
-    py.test tests
+    py.test --cov=./ tests
     codecov
 deps =
     pytest==3.6.4
