Unlock the requirements

--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,6 @@
-wheel==0.31.0
-boto==2.48.0
-python-dateutil==2.7.2
-diskcache==3.0.1
-aiohttp==3.1.1
-setuptools==39.0.1
+wheel
+boto
+python-dateutil
+diskcache
+aiohttp
+setuptools
